client/nav: fix accesskey alignment

--- a/client/css/main.styl
+++ b/client/css/main.styl
@@ -113,8 +113,6 @@ nav.text-nav
         margin-right: 0.6em
         margin-left: calc(0.6em - 1.2em)
         float: left
-    span
-        vertical-align: middle
 
 .messages
     margin: 0 auto
